--- a/nope/Cargo.toml
+++ b/nope/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "webfinger"
+name = "nope"
 authors = ["itowlson <ivan.towlson@fermyon.com>"]
-description = "Webfinger protocol implementation"
+description = "Log requests that we can't satisfy"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,11 +16,8 @@ bytes = "1"
 chrono = "0.4.23"
 # General-purpose crate with common HTTP types.
 http = "0.2"
-serde = { version = "1.0.151", features = ["derive"] }
-serde_json = "1.0.91"
 # The Spin SDK.
 spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.7.0" }
-url = "2.3.1"
 # Crate that generates Rust Wasm bindings from a WebAssembly interface.
 wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
 
