--- a/outbox/Cargo.toml
+++ b/outbox/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "webfinger"
+name = "outbox"
 authors = ["itowlson <ivan.towlson@fermyon.com>"]
-description = "Webfinger protocol implementation"
+description = "The actor's outbox"
 version = "0.1.0"
 edition = "2021"
 
